WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305619
Crash in Layout::Line::appendInlineBoxEnd; Layout::LineBuilder::placeInlineAndFloatContent
https://bugs.webkit.org/show_bug.cgi?id=305619
Summary
Crash in Layout::Line::appendInlineBoxEnd; Layout::LineBuilder::placeInlineAn...
alan
Reported
2026-01-15 19:40:43 PST
<
rdar://167370800
>
Attachments
Patch
(9.16 KB, patch)
2026-01-15 19:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(5.91 KB, patch)
2026-01-16 05:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(5.91 KB, patch)
2026-01-16 06:44 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-01-15 19:44:24 PST
Created
attachment 478040
[details]
Patch
alan
Comment 2
2026-01-16 05:26:12 PST
Created
attachment 478044
[details]
Patch
alan
Comment 3
2026-01-16 06:44:51 PST
Created
attachment 478046
[details]
[fast-cq]Patch
EWS
Comment 4
2026-01-16 08:03:43 PST
Committed
305713@main
(cf49d7e6190d): <
https://commits.webkit.org/305713@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 478046
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug